Fix min-size custom utility class
Fixes PlantCard photos getting squished if title is long, probably other stuff

Issue: Wasn't importing tailwind.config.js into CSS (no longer picks up config automatically). The migration tool added the import to main.css automatically but it prevented build because of the daisyui plugin.

Remove dark mode --color-prune --color-repot - these are overridden by daisyui anyway, it just doesn't work unless at least 1 exists in tailwind.

--- a/src/main.css
+++ b/src/main.css
@@ -1,4 +1,5 @@
 @import 'tailwindcss';
+@config "../tailwind.config.js";
 @plugin "daisyui" {
     themes: light --default, dark --prefersdark;
 };
@@ -16,15 +17,6 @@
 @theme {
     --color-prune: oklch(0.83 0.155 66.29);
     --color-repot: oklch(0.42 0.081 50.5);
-};
-
-@layer base {
-    @media (prefers-color-scheme: dark) {
-        :root {
-            --color-prune: oklch(0.85 0.1265 66.29);
-            --color-repot: oklch(0.38 0.0709 54.66);
-        }
-    }
 };
 
 @plugin "daisyui/theme" {
